fix overflow y value #345

--- a/css/mviewerstudio.css
+++ b/css/mviewerstudio.css
@@ -1399,5 +1399,5 @@
 			-ms-user-select: none; /* IE 10 and IE 11 */
 			user-select: none; /* Standard syntax */
 			max-height: 500px;
-			overflow-y: hidden;
+			overflow-y: auto;
 		}
